--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "glob": "^10.4.2",
     "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
   },
