--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node Server.js"
   },
+  "engines": {
+    "node": ">=14.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
