--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node Server.js"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": "20.x"
   },
   "keywords": [],
   "author": "",
