--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "Server.js",
   "scripts": {
-    "start": "node Server.js"
+    "start": "node Server.js",
+    "build": "npm install --build-from-source"
   },
   "engines": {
     "node": "20.x"
@@ -19,7 +20,6 @@
     "glob": "^10.4.2",
     "lru-cache": "^10.3.0",
     "rimraf": "^5.0.7",
-    "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
   },
   "devDependencies": {
