--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glob": "^10.4.2",
     "lru-cache": "^10.3.0",
     "rimraf": "^5.0.7",
+    "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
   },
   "devDependencies": {
