--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "Server.js",
   "scripts": {
     "start": "node Server.js",
-    "build": "npm install --build-from-source"
+    "build": "npm install --build-from-source",
+    "postinstall": "npm rebuild sqlite3 --build-from-source"
   },
   "engines": {
     "node": "18.x"
