--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "glob": "^10.4.2",
+    "joi": "^17.13.3",
     "lru-cache": "^10.3.0",
     "rimraf": "^5.0.7",
+    "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "typescript": "^5.4.5"
   },
   "description": ""
