--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.13.3",
     "lru-cache": "^10.3.0",
     "rimraf": "^5.0.7",
+    "semver": "^7.6.3",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
