--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "firebase": "^10.14.0",
     "fs": "^0.0.1-security",
     "glob": "^10.4.2",
     "joi": "^17.13.3",
